--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@
     @apply bg-slate-950 text-gray-100 bg-gradient-to-br from-slate-950 via-slate-900 to-indigo-950/40 min-h-screen;
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
   }
 }
 
