--- a/src/index.css
+++ b/src/index.css
@@ -46,14 +46,17 @@
 }
 
 /* Hide number input spinners */
+/* Hide number input spinners */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
 input[type=number] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
